Modify some broken links and add favicon

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <link rel="shortcut icon" href="/favicon.ico" type="image/ico">
+
     <title>Shashank Shekhar</title>
 
     <!-- Bootstrap Core CSS -->
@@ -176,7 +178,7 @@
                     as my operating system. I mainly learn skills by self learning and online MOOCs.</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
+                    <a href="https://www.github.com/shashank2806" class="btn btn-lg btn-outline">
                         <i class="fa fa-github"></i> Codes
                     </a>
                 </div>
@@ -314,11 +316,11 @@
                             <ul class="list-inline item-details">
                                 
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">June 2017</a>
+                                    <strong><a href="#">June 2017</a>
                                     </strong>
                                 </li>
                                 <li>Type:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                    <strong><a href="#">Web Development</a>
                                     </strong>
                                 </li>
                             </ul>
