Fix broken links

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/test.png" class="img-responsive" alt="Cabin">
+                        <img src="img/portfolio/test.png" class="img-responsive" alt="Personal Website">
                     </a>
                 </div>
                 <!--<div class="col-sm-4 portfolio-item">
@@ -295,7 +295,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; shashankshekhar.me 2017
+                        Copyright &copy; Shashank Shekhar
                     </div>
                 </div>
             </div>
@@ -324,7 +324,7 @@
                         <div class="modal-body">
                             <h2>Personal Website</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/test.png" class="img-responsive img-centered" alt="">
                             <p>I made my personal portfolio website which is hosted at <a href="https://github.com/shashank2806/shashank2806.github.io">GitHub</a>. You can find
                             source code there.</p>
                             <ul class="list-inline item-details">
