--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
+    <!--Script for google alalytics-->
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -88,11 +89,11 @@
         <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-circle img-responsive" style="height: 30%; width: 30%" src="img/profile.jpg" alt="">
+                    <img class="img-circle img-responsive" style="height: 30%; width: 30%" src="img/profile.jpg" alt="Shashank">
                     <div class="intro-text">
                         <h1 class="name">Shashank Shekhar</h1>
                         <hr class="star-light">
-                        <span class="skills">Web Developer - Python Enthusiast - User Experience Designer</span>
+                        <span class="skills">Web Developer - Python Enthusiast - Coder</span>
                     </div>
                 </div>
             </div>
@@ -119,17 +120,17 @@
                         <img src="img/portfolio/test.png" class="img-responsive" alt="Personal Website">
                     </a>
                 </div>
-                <!--<div class="col-sm-4 portfolio-item">
+                <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/cake.png" class="img-responsive" alt="Slice of cake">
+                        <img style="height: 60%; width: 100%" src="img/portfolio/pong.png" class="img-responsive" alt="Pong">
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
+                <!--<div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -345,7 +346,7 @@
             </div>
         </div>
     </div>
-    <!--<div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
@@ -357,21 +358,21 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Pong</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="img/portfolio/pong.png" class="img-responsive img-centered" alt="">
+                            <p>This is an implementation of clasical acrade game Pong. I made it using simplegui module. You can play implementatin of my game <a href="http://www.codeskulptor.org/#user43_URNG92lhfzaHdjc.py" target="_blank">here</a>.</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                <li>GitHub:
+                                    <strong><a href="https://github.com/shashank2806/rice-python/blob/master/week-4/pong.py" target="_blank">Code</a>
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong><a href="#">June 2017</a>
                                     </strong>
                                 </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>Language:
+                                    <strong><a href="#">Python</a>
                                     </strong>
                                 </li>
                             </ul>
@@ -382,7 +383,7 @@
             </div>
         </div>
     </div>
-    <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
+    <!--<div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
