Add code for google site verificaton

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <meta property="og:image" content="http://shashankshekhar.me/img/profile.jpg">
     <meta name="description" content="Coder | Programmer | Python Enthusiast">
     <meta property="og:description" content="Coder | Programmer | Python Enthusiast">
+    <meta name="google-site-verification" content="6AVfdOs0gH8emNX8Z9nXa1FHF5DWffaFz4cwdNNy2u4">
 
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
 
