Add links in images

--- a/index.html
+++ b/index.html
@@ -367,7 +367,8 @@
                         <div class="modal-body">
                             <h2>Pong</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/pong.png" class="img-responsive img-centered" alt="">
+                            <a href="http://www.codeskulptor.org/#user43_URNG92lhfzaHdjc.py" target="_blank">
+                            <img src="img/portfolio/pong.png" class="img-responsive img-centered" alt=""></a>
                             <p>This is an implementation of clasical acrade game Pong. I made it using simplegui module. You can play implementatin of my game <a href="http://www.codeskulptor.org/#user43_URNG92lhfzaHdjc.py" target="_blank">here</a>.</p>
                             <ul class="list-inline item-details">
                                 <li>GitHub:
@@ -404,10 +405,11 @@
                         <div class="modal-body">
                             <h2>Project Title</h2>
                             <hr class="star-primary">
-                                <p>
+
                                     <a href="http://www.codeskulptor.org/#user43_6QJT7APiv2_38.py" target="_blank">
                                     <img src="img/portfolio/ricerocks.jpg" class="img-responsive img-centered" alt="">
-                                </p>
+                                    </a>
+
                             <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
