--- a/index.html
+++ b/index.html
@@ -410,20 +410,20 @@
                                     <img src="img/portfolio/ricerocks.jpg" class="img-responsive img-centered" alt="">
                                     </a>
 
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>This is an implementation of clasical acrade game Aestroids. I made it using simplegui module. You can play implementatin of my game <a href="http://www.codeskulptor.org/#user43_6QJT7APiv2_38.py" target="_blank">here</a>.</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
-                                    </strong>
-                                </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
-                                    </strong>
-                                </li>
+                             <li>GitHub:
+                                 <strong><a href="https://github.com/shashank2806/rice-python/blob/master/week-8/ricerocks.py" target="_blank">Code</a>
+                                 </strong>
+                             </li>
+                             <li>Date:
+                                 <strong><a href="#">August 2017</a>
+                                 </strong>
+                             </li>
+                             <li>Language:
+                                 <strong><a href="#">Python</a>
+                                 </strong>
+                             </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
