change icons for resume

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="https://www.github.com/shashank2806" class="btn btn-lg btn-outline">
-                        <i class="fa fa-github"></i> Codes
+                        <i class="fa fa-eye"></i> Resume
                     </a>
                 </div>
             </div>
