--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     as my operating system. I mainly learn skills by self learning and online MOOCs.</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="https://www.github.com/shashank2806" class="btn btn-lg btn-outline">
+                    <a href="resume.pdf" class="btn btn-lg btn-outline">
                         <i class="fa fa-eye"></i> Resume
                     </a>
                 </div>
