--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <div class="intro-text">
                         <h1 class="name">Shashank Shekhar</h1>
                         <hr class="star-light">
-                        <span class="skills">Web Developer - Python Enthusiast - Coder</span>
+                        <span class="skills">Machine Learning Enthusiast</span>
                     </div>
                 </div>
             </div>
@@ -192,12 +192,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Hi! I am Shashank, I am a geek, you can always find me with laptop or smartphone in my hand. I love coding.
-                    I know C | Python | HTML | CSS | Bootstrap | JQuery. You can see my project on GitHub</p>
+                    <p>Hi! I am Shashank, I am a sophomore year Computer, Interested in Artificial Intelligence and Machine Learning.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>I am currently persuing my B.Tech in CSE. I am in sophomore year. I am a open-source enthusiast. I use ubuntu
-                    as my operating system. I mainly learn skills by self learning and online MOOCs.</p>
+                    <p>I enjoy experimenting with Machine Learning and Deep Learning techinques and apply it to different areas.</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="resume.pdf" class="btn btn-lg btn-outline">
