update and bug fix

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Theme CSS -->
-    <link href="css/freelancer.min.css" rel="stylesheet">
+    <!-- <link href="css/freelancer.min.css" rel="stylesheet"> -->
+    <link href="css/freelancer.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -117,7 +118,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4 portfolio-item">
+                <!-- <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -126,8 +127,8 @@
                         </div>
                         <img src="img/portfolio/test.png" class="img-responsive" alt="Personal Website">
                     </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
+                </div> -->
+                <div class="col-sm-6 portfolio-item">
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -137,7 +138,7 @@
                         <img style="height: 60%; width: 100%" src="img/portfolio/pong.png" class="img-responsive" alt="Pong">
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-sm-6 portfolio-item">
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -192,10 +193,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Hi! I am Shashank, I am a sophomore year Computer, Interested in Artificial Intelligence and Machine Learning.</p>
+                    <p>Hi! I am Shashank, I am a sophomore year Computer, Interested in Artificial Intelligence and Machine Learning, particularly in the feild of computer vision. I also enjoy getting involved in coding contests.</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>I enjoy experimenting with Machine Learning and Deep Learning techinques and apply it to different areas.</p>
+                    <p>I enjoy experimenting with Machine Learning and Deep Learning techinques and apply it to different areas. I regularly contribute to open source projects in organizations. Please visit my <span class="anchor"><a href="https://www.github.com/shashank2806">Github</a></span> profile to see recent contributions.</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="resume.pdf" class="btn btn-lg btn-outline">
