--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Hi! I am Shashank, I am a sophomore year Computer, Interested in Artificial Intelligence and Machine Learning, particularly in the feild of computer vision. I also enjoy getting involved in coding contests.</p>
+                    <p>Hi! I am Shashank, I am a sophomore year Computer Science Student, Interested in Artificial Intelligence and Machine Learning, particularly in the feild of computer vision. I also enjoy getting involved in coding contests.</p>
                 </div>
                 <div class="col-lg-4">
                     <p>I enjoy experimenting with Machine Learning and Deep Learning techinques and apply it to different areas. I regularly contribute to open source projects in organizations. Please visit my <span class="anchor"><a href="https://www.github.com/shashank2806">Github</a></span> profile to see recent contributions.</p>
