--- a/new/index.html
+++ b/new/index.html
@@ -3,9 +3,24 @@
 <head>
   <title>Shashank Shekhar</title>
   <meta charset="UTF-8">
+  <style>
+    img {
+    display: block;
+    margin: 0 auto;
+    border-radius: 50%;
+    width:15%;
+  }
+  </style>
 </head>
 <body>
+  <img src="profile.jpg" alt="profile picture" style="align-items:center">
   <h1 style="text-align:center;">Shashank Shekhar</h1>
   <p>This is a paragraph.</p>
+<footer>
+  <p style="text-align:center;">Copyright &copy; Shashank Shekhar</p>
+  <p style="text-align:center;">Contact: <a href="mailto:correspond.shashank@gmail.com">correspond.shashank@gmail.com</a>.</p>
+</footer>
 </body>
+
+ 
 </html> 
