add social links

--- a/new/index.html
+++ b/new/index.html
@@ -9,18 +9,61 @@
     margin: 0 auto;
     border-radius: 50%;
     width:15%;
-  }
+    }
+
+    li {
+    display:inline;
+    padding: 10px 40px;
+    }
+
+    p {
+      text-align:center;
+    }
+
+    body {
+     padding:10px;
+    }
   </style>
 </head>
 <body>
-  <img src="profile.jpg" alt="profile picture" style="align-items:center">
+  <img src="profile.jpg" alt="profile picture">
   <h1 style="text-align:center;">Shashank Shekhar</h1>
   <p>This is a paragraph.</p>
-<footer>
-  <p style="text-align:center;">Copyright &copy; Shashank Shekhar</p>
-  <p style="text-align:center;">Contact: <a href="mailto:correspond.shashank@gmail.com">correspond.shashank@gmail.com</a>.</p>
-</footer>
-</body>
 
- 
+  <div id="menu" style="text-align:center;">
+      <ul>
+          <li><a href="#">Projects</a>
+          </li>
+          <li><a href="#">Resume</a>
+          </li>
+          <li><a href="#">About</a>
+          </li>
+          <li><a href="#">Contact</a>
+          </li>
+      </ul>
+  </div>
+
+  <h2 style="text-align:center;">Around the Web</h2>
+    <div id="menu" style="text-align:center;">
+        <ul>
+            <li><a href="#">GitHub</a>
+            </li>
+            <li><a href="#">LinkedIn</a>
+            </li>
+            <li><a href="#">Twitter</a>
+            </li>
+            <li><a href="#">Kaggle</a>
+            </li>
+            <li><a href="#">Facebook</a>
+            </li>
+        </ul>
+    </div>
+  <div>
+    <footer>
+      <p>Copyright &copy; Shashank Shekhar</p>
+      <p>Contact: <a href="mailto:correspond.shashank@gmail.com">correspond.shashank@gmail.com</a>.</p>
+    </footer>
+  </div>
+
+</body>
 </html> 
