Complete home page

--- a/new/index.html
+++ b/new/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Shashank Shekhar</title>
+  <title>Shashank Shekhar | Home</title>
   <meta charset="UTF-8">
   <style>
     img {
@@ -23,27 +23,30 @@
     body {
      padding:10px;
     }
+    footer {
+      margin-top: 5%;
+    }
   </style>
 </head>
 <body>
   <img src="profile.jpg" alt="profile picture">
   <h1 style="text-align:center;">Shashank Shekhar</h1>
-  <p>This is a paragraph.</p>
+  <p>Machine Learning and Data Science Enthusiast</p>
 
   <div id="menu" style="text-align:center;">
       <ul>
+          <li><a href="#">About</a>
+          </li>
           <li><a href="#">Projects</a>
           </li>
           <li><a href="#">Resume</a>
-          </li>
-          <li><a href="#">About</a>
           </li>
           <li><a href="#">Contact</a>
           </li>
       </ul>
   </div>
 
-  <h2 style="text-align:center;">Around the Web</h2>
+  <h2 style="text-align:center; margin-top: 2%">Around the Web</h2>
     <div id="menu" style="text-align:center;">
         <ul>
             <li><a href="#">GitHub</a>
