--- a/new/index.html
+++ b/new/index.html
@@ -35,11 +35,11 @@
 
   <div id="menu" style="text-align:center;">
       <ul>
-          <li><a href="#">About</a>
+          <li><a href="about.html">About</a>
           </li>
           <li><a href="#">Projects</a>
           </li>
-          <li><a href="#">Resume</a>
+          <li><a href="resume.pdf">Resume</a>
           </li>
           <li><a href="#">Contact</a>
           </li>
