--- a/new/about.html
+++ b/new/about.html
@@ -3,8 +3,14 @@
 <head>
   <title>Shashank Shekhar | About</title>
   <meta charset="UTF-8">
+  <style>
+    body {
+      padding: 2%;
+    }
+  </style>
 </head>
 <body>
-  <h2>About Me</h2>
+  <h1 style="text-align:center">About Me</h1>
+  <p>I am a junior year computer science student. I </p>
 </body>
 </html> 
