--- a/new/index.html
+++ b/new/index.html
@@ -12,8 +12,15 @@
     }
 
     li {
-    display:inline;
+    list-style: none;
     padding: 10px 40px;
+    }
+
+    ul {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
     }
 
     p {
@@ -21,7 +28,7 @@
     }
 
     body {
-     padding:10px;
+     padding: 20px;
     }
     footer {
       margin-top: 5%;
@@ -49,15 +56,15 @@
   <h2 style="text-align:center; margin-top: 2%">Around the Web</h2>
     <div id="menu" style="text-align:center;">
         <ul>
-            <li><a href="#">GitHub</a>
+            <li><a href="https://github.com/shashank2806">GitHub</a>
             </li>
-            <li><a href="#">LinkedIn</a>
+            <li><a href="https://linkedin.com/in/shashank2806">LinkedIn</a>
             </li>
-            <li><a href="#">Twitter</a>
+            <li><a href="https://twitter.com/shekhar28june">Twitter</a>
             </li>
-            <li><a href="#">Kaggle</a>
+            <li><a href="https://kaggle.com/shashank2806">Kaggle</a>
             </li>
-            <li><a href="#">Facebook</a>
+            <li><a href="https://facebook.com/shashank2806">Facebook</a>
             </li>
         </ul>
     </div>
