Add content to about.html

--- a/new/index.html
+++ b/new/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Shashank Shekhar | Home</title>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=initial">
   <style>
     img {
     display: block;
