--- a/new/index.html
+++ b/new/index.html
@@ -45,7 +45,7 @@
       <ul>
           <li><a href="about.html">About</a>
           </li>
-          <li><a href="#">Projects</a>
+          <li><a href="projects.html">Projects</a>
           </li>
           <li><a href="resume.pdf">Resume</a>
           </li>
