--- a/new/index.html
+++ b/new/index.html
@@ -49,7 +49,7 @@
           </li>
           <li><a href="resume.pdf">Resume</a>
           </li>
-          <li><a href="#">Contact</a>
+          <li><a href="contact.html">Contact</a>
           </li>
       </ul>
   </div>
