--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
     <footer>
       <p>Copyright &copy; Shashank Shekhar</p>
       <p>Contact: <a href="mailto:correspond.shashank@gmail.com">correspond.shashank@gmail.com</a>.</p>
+      <!-- HACK to count visitors to site -->
+      <a href="https://info.flagcounter.com/Gtp6"><img src="https://s01.flagcounter.com/count/Gtp6/bg_FFFFFF/txt_000000/border_FFFFFF/columns_5/maxflags_12/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" border="0" style="display:none"></a>
     </footer>
   </div>
 
