Add custom domain for project

--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
       <ul>
           <li><a href="https://github.com/shashank2806/cheetah-leopard-jaguar">GitHub</a>
           </li>
-          <li><a href="https://bigcats.onrender.com/">Live Demo</a>
+          <li><a href="https://bigcats.shashankshekhar.me/">Live Demo</a>
       </ul>
   </div>
   <h2 style="text-align:center">Apna-Broker</h2>
