--- a/contact.html
+++ b/contact.html
@@ -22,8 +22,8 @@
 <body>
   <h1 style="text-align:center">Contact</h1>
   <p>Email: <a href="mailto:correspond.shashank@gmail.com">correspond.shashank@gmail.com</a>.</p>
-  <p>Call: <a href="Call:9852625351">9852625351</a></p>
-  <p>WhatsApp: <a href="Call:9852625351">9852625351</a></p>
+  <p>Call: <a href="tel:9852625351">9852625351</a></p>
+  <p>WhatsApp: <a href="tel:9852625351">9852625351</a></p>
   <p>Location: Jaipur, Rajasthan, India</p>
   <footer>
     <a href="https://info.flagcounter.com/Gtp6"><img src="https://s01.flagcounter.com/count/Gtp6/bg_FFFFFF/txt_000000/border_FFFFFF/columns_5/maxflags_12/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
