--- a/about.html
+++ b/about.html
@@ -10,8 +10,8 @@
     p {
       text-align:center;
       margin-top: 50px;
-      margin-left: 30%;
-      margin-right: 30%;
+      margin-left: 15%;
+      margin-right: 15%;
     }
   </style>
 </head>
@@ -19,10 +19,11 @@
   <h1 style="text-align:center">About Me</h1>
   <p>I am a junior year computer science student. I am in awe of Artificial Intelligence and Machine Learning, and I am always
      learning something about this field. I enjoy experimenting with Machine Learning and Deep Learning techinques and apply it
-      to different areas.
+      to different areas. I am also interested in Data Science and love when data throws some mind-blogging insights.
   </p>
   <p>
-    I am also interested in Data Science and love when data throws some mind-blogging insights.
+    I'm always looking for opportunities to work on exciting projects. I'm currently open to part-time and full-time positions,
+    as well as contract work. Let's make something great, together.
   </p>
 </body>
 </html> 
