Add medium blog link

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
           </li>
           <li><a href="resume.pdf">Resume</a>
           </li>
+          <li><a href="https://medium.com/@correspond.shashank">Blog</a>
+          </li>
           <li><a href="contact.html">Contact</a>
           </li>
       </ul>
