--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
 </head>
 <body>
   <h1 style="text-align:center">Projects</h1>
-  <h2 style="text-align:center">Is it a Chhetah, Leopard or Jaguar?</h2>
+  <h2 style="text-align:center">Is it a Cheetah, Leopard or Jaguar?</h2>
   <p>
       Identifies if it is a cheetah, a leopard, or a jaguar by looking at their images. I always have trouble classifying
       between these three big cats, that's why I thought to make a classifier using deep-learning.
