--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
   <h1 style="text-align:center">About Me</h1>
   <p>I am a junior year computer science student. I am in awe of Artificial Intelligence and Machine Learning, and I am always
      learning something about this field. I enjoy experimenting with Machine Learning and Deep Learning techinques and apply it
-      to different areas. I am also interested in Data Science and love when data throws some mind-blogging insights.
+      to different areas. I am also interested in Data Science and love when data throws some mind-boggling insights.
   </p>
   <p>
     I'm always looking for opportunities to work on exciting projects. I'm currently open to part-time and full-time positions,
