Update Resume and Info

--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Shashank Shekhar | About</title>
   <meta charset="UTF-8">
@@ -7,23 +8,26 @@
     body {
       padding: 2%;
     }
+
     p {
-      text-align:center;
+      text-align: center;
       margin-top: 50px;
       margin-left: 15%;
       margin-right: 15%;
     }
   </style>
 </head>
+
 <body>
   <h1 style="text-align:center">About Me</h1>
-  <p>I am a junior year computer science student. I am in awe of Artificial Intelligence and Machine Learning, and I am always
-     learning something about this field. I enjoy experimenting with Machine Learning and Deep Learning techinques and apply it
-      to different areas. I am also interested in Data Science and love when data throws some mind-boggling insights.
+  <p>
+    I work as Data Scientist. I want to understand things clearly, and explain them well.
   </p>
   <p>
-    I'm always looking for opportunities to work on exciting projects. I'm currently open to part-time and full-time positions,
+    I'm always looking for opportunities to work on exciting projects. I'm currently open to part-time and full-time
+    positions,
     as well as contract work. Let's make something great, together.
   </p>
 </body>
-</html> 
+
+</html>
