--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Shashank Shekhar | Home</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=initial">
   <style>
     img {
-    display: block;
-    margin: 0 auto;
-    border-radius: 50%;
-    width:15%;
+      display: block;
+      margin: 0 auto;
+      border-radius: 50%;
+      width: 15%;
     }
 
     li {
-    list-style: none;
-    padding: 10px 40px;
+      list-style: none;
+      padding: 10px 40px;
     }
 
     ul {
@@ -25,60 +26,65 @@
     }
 
     p {
-      text-align:center;
+      text-align: center;
     }
 
     body {
-     padding: 20px;
+      padding: 20px;
     }
+
     footer {
       margin-top: 5%;
     }
   </style>
 </head>
+
 <body>
   <img src="profile.jpg" alt="profile picture">
   <h1 style="text-align:center;">Shashank Shekhar</h1>
-  <p>Machine Learning and Data Science Enthusiast</p>
+  <p>Data Scientist</p>
 
   <div id="menu" style="text-align:center;">
-      <ul>
-          <li><a href="about.html">About</a>
-          </li>
-          <li><a href="projects.html">Projects</a>
-          </li>
-          <li><a href="resume.pdf">Resume</a>
-          </li>
-          <li><a href="https://medium.com/@correspond.shashank">Blog</a>
-          </li>
-          <li><a href="contact.html">Contact</a>
-          </li>
-      </ul>
+    <ul>
+      <li><a href="about.html">About</a>
+      </li>
+      <li><a href="projects.html">Projects</a>
+      </li>
+      <li><a href="resume.pdf">Resume</a>
+      </li>
+      <li><a href="https://medium.com/@correspond.shashank">Blog</a>
+      </li>
+      <li><a href="contact.html">Contact</a>
+      </li>
+    </ul>
   </div>
 
   <h2 style="text-align:center; margin-top: 2%">Around the Web</h2>
-    <div id="menu" style="text-align:center;">
-        <ul>
-            <li><a href="https://github.com/shashank2806">GitHub</a>
-            </li>
-            <li><a href="https://linkedin.com/in/shashank2806">LinkedIn</a>
-            </li>
-            <li><a href="https://twitter.com/shekhar28june">Twitter</a>
-            </li>
-            <li><a href="https://kaggle.com/shashank2806">Kaggle</a>
-            </li>
-            <li><a href="https://facebook.com/shashank2806">Facebook</a>
-            </li>
-        </ul>
-    </div>
+  <div id="menu" style="text-align:center;">
+    <ul>
+      <li><a href="https://github.com/shashank2806">GitHub</a>
+      </li>
+      <li><a href="https://linkedin.com/in/shashank2806">LinkedIn</a>
+      </li>
+      <li><a href="https://twitter.com/shekhar28june">Twitter</a>
+      </li>
+      <li><a href="https://kaggle.com/shashank2806">Kaggle</a>
+      </li>
+      <li><a href="https://facebook.com/shashank2806">Facebook</a>
+      </li>
+    </ul>
+  </div>
   <div>
     <footer>
       <p>Copyright &copy; Shashank Shekhar</p>
       <p>Contact: <a href="mailto:correspond.shashank@gmail.com">correspond.shashank@gmail.com</a>.</p>
       <!-- HACK to count visitors to site -->
-      <a href="https://info.flagcounter.com/Gtp6"><img src="https://s01.flagcounter.com/count/Gtp6/bg_FFFFFF/txt_000000/border_FFFFFF/columns_5/maxflags_12/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" border="0" style="display:none"></a>
+      <a href="https://info.flagcounter.com/Gtp6"><img
+          src="https://s01.flagcounter.com/count/Gtp6/bg_FFFFFF/txt_000000/border_FFFFFF/columns_5/maxflags_12/viewers_0/labels_0/pageviews_0/flags_0/percent_0/"
+          border="0" style="display:none"></a>
     </footer>
   </div>
 
 </body>
-</html> 
+
+</html>
