--- a/new/index.html
+++ b/new/index.html
@@ -8,7 +8,11 @@
 </head>
 
 <body>
-    <h1>Hello World</h1>
+    <div class="container">
+        <header>Shashank Shekhar</header>
+        <br>
+        <footer>©Shashank Shekhar</footer>
+    </div>
 </body>
 
 </html>
